k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chengetopay
  labels:
    name: chengetopay
    environment: production
